--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,15 @@
 .venv
-.env 
+node_modules
+.env
+
+# Hardhat files
+/cache
+/artifacts
+
+# TypeChain files
+/typechain
+/typechain-types
+
+# solidity-coverage files
+/coverage
+/coverage.json
