--- a/eth-template/package.json
+++ b/eth-template/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@lighthouse-web3/sdk": "^0.3.0",
     "@metamask/detect-provider": "^2.0.0",
+    "@metamask/sdk-react-ui": "^0.14.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
